k8s/00-namespace-configmap.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: pandang
  labels:
    app.kubernetes.io/name: pandang
